Bug 498551 - Apply button remains disabled when changing calendar
Summary: Apply button remains disabled when changing calendar
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-12 08:43 UTC by Grósz Dániel
Modified: 2025-03-11 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2025-01-12 08:43:41 UTC
SUMMARY
When editing an event, changing the details of the event makes the Apply button enabled, as expected. (Changing them back to the original values makes it disabled again.) However, changing the calendar (e.g. from a local korganizer calendar to a Google calendar or vice versa), in order to move it to a different calendar, doesn't make it enabled, even though it works when clicking the OK button.

STEPS TO REPRODUCE
0. Have more than one calendar.
1. Create an event in one calendar.
2. Double click the event to open the editing dialog.
3. At the top, select a different calendar from the combo box.

OBSERVED RESULT
The Apply button remains disabled.

EXPECTED RESULT
The Apply button becomes enabled.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250108
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.6-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
I tested it in Kontact.
Comment 1 Bug Janitor Service 2025-03-08 20:40:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/akonadi/-/merge_requests/235
Comment 2 Allen Winter 2025-03-11 11:40:00 UTC
Git commit 9305dcf7fcbde4accf11fd78be95077144ac4355 by Allen Winter.
Committed on 11/03/2025 at 11:39.
Pushed by winterz into branch 'master'.

collectioncombobox.cpp - add a connect to deal with the combobox changes

Don't ignore the combobox signal indicating that the selection index
has changed. We'll emit the currentChanged signal in that event.

Then users of this widget can connect to that currentChanged signal
and do something useful.

Specifically in the case of the incidenceeditor dialog, we can
enable/disable the Apply button.

M  +3    -0    src/widgets/collectioncombobox.cpp

https://invent.kde.org/pim/akonadi/-/commit/9305dcf7fcbde4accf11fd78be95077144ac4355
Comment 3 Allen Winter 2025-03-11 11:40:22 UTC
Git commit b9b15aab47ce620bb4fb37ec982059578daefd20 by Allen Winter.
Committed on 11/03/2025 at 11:40.
Pushed by winterz into branch 'release/25.04'.

collectioncombobox.cpp - add a connect to deal with the combobox changes

Don't ignore the combobox signal indicating that the selection index
has changed. We'll emit the currentChanged signal in that event.

Then users of this widget can connect to that currentChanged signal
and do something useful.

Specifically in the case of the incidenceeditor dialog, we can
enable/disable the Apply button.


(cherry picked from commit 9305dcf7fcbde4accf11fd78be95077144ac4355)

Co-authored-by: Allen Winter <winter@kde.org>

M  +3    -0    src/widgets/collectioncombobox.cpp

https://invent.kde.org/pim/akonadi/-/commit/b9b15aab47ce620bb4fb37ec982059578daefd20